--- a/styles/main.css
+++ b/styles/main.css
@@ -81,7 +81,7 @@ p a {
 .drop-shadow-text-box {
   width: 90%;
   padding: 5px;
-  background-color: #e5e5e5c2;
+  background: rgba(212, 212, 212, 0.5)
 }
 
 .drop-shadow-text-box p {
@@ -135,27 +135,21 @@ p a {
 
 @media screen and (min-width: 1000px) {
   p {
-    width: 60%;
+    width: 55%;
   }
 
   .drop-shadow-text-box p {
   width: 75%;
   }
   .drop-shadow-text-box {
-    width: 60%;
+    width: 65%;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  p {
-    width: 55%;
-  }
 
   .drop-shadow-text-box p {
-    width: 65%;
+    width: 70%;
   }
 
-  .drop-shadow-text-box {
-    width: 60%;
-  }
 }
