--- a/styles/resources.css
+++ b/styles/resources.css
@@ -62,6 +62,10 @@ main li a, main li, .manual-title {
   overflow-wrap: break-word;
 }
 
+.header-p {
+  text-align: center;
+}
+
 .main__links__a {
   position: absolute;
   top: 50%;
