--- a/styles/TMY-page.css
+++ b/styles/TMY-page.css
@@ -22,6 +22,10 @@
     height: 250px;
 }
 
+.TMY-header {
+  width: 335px;
+}
+
 @media screen and (min-width: 800px) {
   .main__links li  {
     height: 50px;
