--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -24,9 +24,9 @@ body {
 
 header {
   background: linear-gradient(
-                    rgba(212, 212, 212, 0.2),
-                    rgba(194, 192, 192, 0.5)),
-                    url('../images/earth-night.jpeg');
+                rgba(212, 212, 212, 0.2),
+                rgba(194, 192, 192, 0.5)),
+                url('../images/earth-night.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -138,19 +138,18 @@ h3 {
   flex-direction: column;
 }
 
-.main-links__li{
+.main-links__li {
   position: relative;
   margin:  5px auto;
   padding: 28px;
-  box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
-  border: 2px #69696994 double;
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.3);
   width: 60%;
   height: 35px;
+  background-color: #fff
 }
 
 .main-links__li:hover {
   border: 2px #69696994 solid;
-  background-color: #69696940;
 }
 
 .main__subtitle__link {
@@ -158,12 +157,8 @@ h3 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: black;
+  color: #696969;
   line-height: 100%;
-}
-
-.main__subtitle__link:hover {
-  color: #fff;
 }
 
 .main__button {
@@ -185,36 +180,33 @@ h3 {
   height: 100%;
   width: 100%;
   opacity: .7;
-  
 }
 
-  .main-image1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
+.main-image1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+.main-image2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
 
-  .main-image2 {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-  
-  .main-image3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  
-  .main-image4 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
+.main-image3 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
 
-  .main-image5 {
-    display: none;
-  }
+.main-image4 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+.main-image5 {
+  display: none;
+}
 
-  .main-image6 {
-    display: none;
-  }
+.main-image6 {
+  display: none;
+}
 
 /*WHAT IS SECTION*/
 
@@ -244,12 +236,6 @@ h3 {
 
 /*ACCESS DATA*/
 .main__data {
-/*  background: linear-gradient(
-                rgba(212, 212, 212, 0.53),
-                rgba(194, 192, 192, 0.51)),
-                url('../images/panels.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;*/
   text-align: center;
   padding: 5px 6%;
   background-position: bottom;
@@ -261,7 +247,6 @@ h3 {
 }
 
 .drop-shadow-text-box {
-/*  margin: 20px auto;*/
   width: 45%;
   padding: 5px;
   background-color: #00000026;
@@ -287,10 +272,6 @@ h3 {
 }
 
 article {
-/*  background: linear-gradient(
-    rgba(255, 255, 255, 0.7),
-    rgba(194, 192, 192, 0.7)),
-    url('../images/solar-panel.jpeg');*/
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -382,29 +363,6 @@ h4 {
   transform: translate(-50%, 0%);
 }
 
-/*.compatability li {
-  font-size: 14px;
-  box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
-  border: 2px #69696994 double;
-  padding: 3px;
-  margin: 13px 20%;
-  display: block;
-}
-
-.compatability a {
-  letter-spacing: 0;
-  color: black;
-}
-
-.compatability li:hover {
-  border: 2px #69696994 solid;
-  padding: 3px;
-  padding-bottom: 3px;
-  background-color: #69696940;
-  color: #fff;
-}*/
-
-
 /*CONTRIBUTORS*/
 .main__contributors {
   text-align: center;
@@ -421,7 +379,6 @@ h4 {
   display: block;
   margin: 0 20%;
 }
-
 
 /*IMAGE ROW*/
 .main__image-row {
