--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@
 }
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1em;
   margin: 0;
   letter-spacing: 2px;
@@ -17,7 +17,9 @@
 
 body {
   font-size: 62.5%;
-  background-color: #e5e5e5;
+  /*background-color: #e5e5e5;*/
+  /*background-color: #fff;*/
+
 }
 
 h3 {
@@ -62,7 +64,7 @@ p a {
   box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.3);
   width: 60%;
   height: 35px;
-  background-color: #fff;
+  background-color:  #cecccc21;
 }
 
 .main-links__li:hover {
@@ -78,10 +80,13 @@ p a {
 }
 
 .drop-shadow-text-box {
+  border-bottom: 2px solid rgba(212, 212, 212, 0.5);
   margin: auto;
   width: 95%;
   padding: 5px;
-  background: rgba(212, 212, 212, 0.5)
+  background: 
+
+  /*background-color: #fff;*/
 }
 
 .drop-shadow-text-box p {
@@ -91,6 +96,51 @@ p a {
   width: 60%;
 }
 
+/*main collage in sub pages: ;*/
+
+.main__collage {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr); 
+  height: 300px;
+  grid-gap: 0;
+  margin: 0;
+}
+
+.main__collage__image {
+  height: 100%;
+  width: 100%;
+  opacity: .7;
+  
+}
+
+  .main-image1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .main-image2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  .main-image3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  
+  .main-image4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .main-image5 {
+    display: none;
+  }
+
+  .main-image6 {
+    display: none;
+  }
 
 @media screen and (min-width: 800px) {
   h3 {
@@ -113,6 +163,7 @@ p a {
     flex-direction: row;
     justify-content: center;
     margin: 3em;
+    padding-bottom: 4em;
   }
 
   .main-links__li {
@@ -130,18 +181,59 @@ p a {
     margin-bottom: 5em;
   }
 
+  .main__collage {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 15px;
+    height: 300px;
+    margin: 15px 5%;
+  }
+  
+  .main-image1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+  
+  .main-image2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  .main-image3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+  }
+  
+  .main-image4 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+  
+  .main-image5 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: inherit;
+  }
+  
+  .main-image6 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    display: inherit;
+  }
+
 }
 
 @media screen and (min-width: 1000px) {
   p {
-    width: 55%;
+    width: 80%;
   }
 
   .drop-shadow-text-box p {
   width: 75%;
   }
   .drop-shadow-text-box {
-    width: 60%;
+    width: 80%;
   }
 }
 
