--- a/styles/table.css
+++ b/styles/table.css
@@ -1,7 +1,7 @@
 table {
-  width: 70%;
+  width: 100%;
   margin: 5em auto;
-  background-color: #fff;
+  background-color: #cecccc21;
   overflow-x: scroll;
 }
 
