--- a/styles/US-data.css
+++ b/styles/US-data.css
@@ -22,8 +22,6 @@ table {
 .data-availability {
   width: 100%;
   text-align: center;
-  padding: 10px;
-  margin: 30px 0;
 }
 
 .footer_image {
@@ -36,7 +34,6 @@ table {
 
 .notes {
   margin: 0 auto 10em;
-  
 }
 
 
@@ -52,6 +49,33 @@ table {
 .data__table-2 td {
   width: 30%;
   padding: 7px;
+}
+
+.photo_A {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/solar-panel.jpeg');
+  background-size: cover;
+  background-position: center;
+}
+
+.photo_B {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/wind-energy.jpeg');
+  background-size: cover;
+  background-position: bottom;
+}
+
+.photo_C {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/nyc-night.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 @media screen and (min-width: 600px) {
